--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ native-tls = "0.2.7"
 num-integer = "0.1.4"
 perlin_noise = "1.0.1"
 named-binary-tag = "0.6.0"
+log = "0.4.1"
+env_logger = "0.9.0"
+chrono = "0.4.1"
